[gd_scene load_steps=8 format=2]

[ext_resource path="res://MiscRelated/ControlProgressBarRelated/ControlProgressBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/PlayerHealthPanel/Assets/PlayerHealthBar_BorderAndBackground.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/PlayerHealthPanel/Assets/PlayerHealthBar_BarFill_Green.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/PlayerHealthPanel/Assets/PlayerHealthBar_ShieldIcon.png" type="Texture" id=4]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/PlayerHealthPanel/PlayerHealthPanel.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 5 )

[node name="PlayerHealthPanel" type="MarginContainer"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
script = ExtResource( 6 )

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_right = 100.0
margin_bottom = 20.0
bar_background_pic = ExtResource( 2 )
fill_foreground_pic = ExtResource( 3 )
fill_foreground_margin_top = 2.0
fill_foreground_margin_left = 2.0
max_value = 150.0
current_value = 150.0
scale_of_bars_scale = Vector2( 1, 1 )
yield_before_update = true

[node name="LabelAndImgContainer" type="MarginContainer" parent="."]
margin_right = 100.0
margin_bottom = 20.0
custom_constants/margin_right = 5

[node name="HBoxContainer" type="HBoxContainer" parent="LabelAndImgContainer"]
margin_left = 78.0
margin_top = 3.0
margin_right = 95.0
margin_bottom = 16.0
size_flags_horizontal = 10
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="LabelAndImgContainer/HBoxContainer"]
margin_bottom = 13.0
custom_constants/margin_top = 1

[node name="HealthLabel" type="Label" parent="LabelAndImgContainer/HBoxContainer/MarginContainer"]
margin_top = 1.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )

[node name="HeartIcon" type="TextureRect" parent="LabelAndImgContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 17.0
margin_bottom = 12.0
size_flags_vertical = 6
texture = ExtResource( 4 )
